/*
plugins {
	id 'java'
	id 'org.springframework.boot' version '3.0.1'
	id 'io.spring.dependency-management' version '1.1.0'
	id 'org.hidetake.swagger.generator' version '2.19.2'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springdoc:springdoc-openapi-ui:1.2.34'
	implementation 'io.swagger:swagger-annotations:1.5.22'
	swaggerCodegen 'io.swagger:swagger-codegen-cli:2.4.29'             // Swagger Codegen V2
	implementation 'org.springframework.boot:spring-boot-starter'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
}

swaggerSources {
	petstore {
		inputFile = file('petstore.yaml')
		code {
			language = 'spring'
			configFile = file('config.json')
			components = ['models', 'apis']
		}
	}
}

// Configure compile task dependency and source
compileJava.dependsOn swaggerSources.petstore.code
sourceSets.main.java.srcDir "${swaggerSources.petstore.code.outputDir}/src/main/java"
sourceSets.main.resources.srcDir "${swaggerSources.petstore.code.outputDir}/src/main/resources"*/


plugins {
	id 'java'
	id 'org.hidetake.swagger.generator' version '2.19.2'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web:2.1.3.RELEASE'
	implementation 'io.swagger:swagger-annotations:1.6.9'
	swaggerCodegen 'io.swagger.codegen.v3:swagger-codegen-cli:3.0.36'
}

swaggerSources {
	openapi {
		inputFile = file("$rootDir/openapi.yaml")
		code {
			language = 'spring'
			configFile = file("$rootDir/config.json")
			components = ['models', 'apis']

			// https://github.com/int128/gradle-swagger-generator-plugin/issues/221
			jvmArgs = ['--add-opens=java.base/java.util=ALL-UNNAMED']
		}
	}
}

compileJava.dependsOn swaggerSources.openapi.code
sourceSets.main.java.srcDir "${swaggerSources.openapi.code.outputDir}/src/main/java"
sourceSets.main.resources.srcDir "${swaggerSources.openapi.code.outputDir}/src/main/resources"